--- a/src/arduinobot_cpp_examples/package.xml
+++ b/src/arduinobot_cpp_examples/package.xml
@@ -10,7 +10,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>rcl_interfaces</build_depend>
 
-  <exec_depend>rclpy</exec_depend>
+  <exec_depend>rclcpp</exec_depend>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
