--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
 {
-    "python.autoComplete.extraPaths": [
-        "/media/sf_Development/ros2_manipulators/install/arduinobot_py_examples/lib/python3.10/site-packages",
-        "/opt/ros/humble/lib/python3.10/site-packages",
-        "/opt/ros/humble/local/lib/python3.10/dist-packages"
-    ],
-    "python.analysis.extraPaths": [
-        "/media/sf_Development/ros2_manipulators/install/arduinobot_py_examples/lib/python3.10/site-packages",
-        "/opt/ros/humble/lib/python3.10/site-packages",
-        "/opt/ros/humble/local/lib/python3.10/dist-packages"
-    ],
-    "cmake.ignoreCMakeListsMissing": true
+  "python.autoComplete.extraPaths": [
+    "/media/sf_Development/ros2_manipulators/install/arduinobot_py_examples/lib/python3.10/site-packages",
+    "/opt/ros/humble/lib/python3.10/site-packages",
+    "/opt/ros/humble/local/lib/python3.10/dist-packages"
+  ],
+  "python.analysis.extraPaths": [
+    "/media/sf_Development/ros2_manipulators/install/arduinobot_py_examples/lib/python3.10/site-packages",
+    "/opt/ros/humble/lib/python3.10/site-packages",
+    "/opt/ros/humble/local/lib/python3.10/dist-packages"
+  ],
+  "cmake.ignoreCMakeListsMissing": true,
+  "files.associations": {
+    "functional": "cpp"
+  }
 }
