--- a/src/arduinobot_cpp_examples/CMakeLists.txt
+++ b/src/arduinobot_cpp_examples/CMakeLists.txt
@@ -13,12 +13,17 @@ find_package(rcl_interfaces REQUIRED)
 
 # .exe
 include_directories(include)
+
 add_executable(simple_publisher src/simple_publisher.cpp)
 ament_target_dependencies(simple_publisher rclcpp std_msgs)
+
+add_executable(simple_subscriber src/simple_subscriber.cpp)
+ament_target_dependencies(simple_subscriber rclcpp std_msgs)
 
 # Install the executable
 install(TARGETS
   simple_publisher
+  simple_subscriber
   DESTINATION lib/${PROJECT_NAME}
 )
 
